Juiste plaatsing van bestanden

--- a/src/main/resources/views/Preferences.fxml
+++ b/src/main/resources/views/Preferences.fxml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
 
 <?import javafx.geometry.Insets?>
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="main.java.client.ui.Controller">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 
-    <Label text="Fill in your name"/>
-    <TextField fx:id="nameField"/>
-    <HBox spacing="5">
-        <padding><Insets top="3" left="1" right="1"/></padding>
-        <Circle radius="5" fill="#FFFF00" stroke="#000" fx:id="yellowButton" onMouseClicked="#setColorYellow" onMouseEntered="#yellowEnterHover" onMouseExited="#yellowLeaveHover"/>
-        <Circle radius="5" fill="#FF9000" stroke="#000" fx:id="orangeButton" onMouseClicked="#setColorOrange" onMouseEntered="#orangeEnterHover" onMouseExited="#orangeLeaveHover"/>
-        <Circle radius="5" fill="#FF0000" stroke="#000" fx:id="redButton" onMouseClicked="#setColorRed" onMouseEntered="#redEnterHover" onMouseExited="#redLeaveHover"/>
-        <Circle radius="5" fill="#AA0039" stroke="#000" fx:id="redPurpleButton" onMouseClicked="#setColorRedPurple" onMouseEntered="#redPurpleEnterHover" onMouseExited="#redPurpleLeaveHover"/>
-        <Circle radius="5" fill="#550461" stroke="#000" fx:id="purpleButton" onMouseClicked="#setColorPurple" onMouseEntered="#purpleEnterHover" onMouseExited="#purpleLeaveHover"/>
-        <Circle radius="5" fill="#0000FF" stroke="#000" fx:id="blueButton" onMouseClicked="#setColorBlue" onMouseEntered="#blueEnterHover" onMouseExited="#blueLeaveHover"/>
-        <Circle radius="5" fill="#00FF00" stroke="#000" fx:id="greenButton" onMouseClicked="#setColorGreen" onMouseEntered="#greenEnterHover" onMouseExited="#greenLeaveHover"/>
-        <Circle radius="5" fill="#FFFFFF" stroke="#000" fx:id="whiteButton" onMouseClicked="#setColorWhite" onMouseEntered="#whiteEnterHover" onMouseExited="#whiteLeaveHover"/>
-        <Circle radius="5" fill="#000000" stroke="#000" fx:id="blackButton" onMouseClicked="#setColorBlack" onMouseEntered="#blackEnterHover" onMouseExited="#blackLeaveHover"/>
-        <Circle radius="5" fill="#7D7D7D" stroke="#000" fx:id="grayButton" onMouseClicked="#setColorGray" onMouseEntered="#grayEnterHover" onMouseExited="#grayLeaveHover"/>
-        <Circle radius="5" fill="#FF00A5" stroke="#000" fx:id="pinkButton" onMouseClicked="#setColorPink" onMouseEntered="#pinkEnterHover" onMouseExited="#pinkLeaveHover"/>
-        <Circle radius="5" fill="#B4FF00" stroke="#000" fx:id="lgreenButton" onMouseClicked="#setColorLGreen" onMouseEntered="#lgreenEnterHover" onMouseExited="#lgreenLeaveHover"/>
-        <Circle radius="10" stroke="#000" fx:id="displayCircle"/>
+<VBox prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="client.ui.PreferencesController">
+    <Label text="Fill in your name" />
+    <TextField fx:id="nameField" />
+    <HBox spacing="5" fx:id="kleur">
+        <padding><Insets left="1" right="1" top="3" /></padding>
+        <Circle fx:id="yellowButton"    fill="#FFFF00" onMouseClicked="#setColorYellow"    onMouseEntered="#yellowEnterHover"    onMouseExited="#yellowLeaveHover"    radius="5" stroke="#000" />
+        <Circle fx:id="orangeButton"    fill="#FF9000" onMouseClicked="#setColorOrange"    onMouseEntered="#orangeEnterHover"    onMouseExited="#orangeLeaveHover"    radius="5" stroke="#000" />
+        <Circle fx:id="redButton"       fill="#FF0000" onMouseClicked="#setColorRed"       onMouseEntered="#redEnterHover"       onMouseExited="#redLeaveHover"       radius="5" stroke="#000" />
+        <Circle fx:id="redPurpleButton" fill="#AA0039" onMouseClicked="#setColorRedPurple" onMouseEntered="#redPurpleEnterHover" onMouseExited="#redPurpleLeaveHover" radius="5" stroke="#000" />
+        <Circle fx:id="purpleButton"    fill="#550461" onMouseClicked="#setColorPurple"    onMouseEntered="#purpleEnterHover"    onMouseExited="#purpleLeaveHover"    radius="5" stroke="#000" />
+        <Circle fx:id="blueButton"      fill="#0000FF" onMouseClicked="#setColorBlue"      onMouseEntered="#blueEnterHover"      onMouseExited="#blueLeaveHover"      radius="5" stroke="#000" />
+        <Circle fx:id="greenButton"     fill="#00FF00" onMouseClicked="#setColorGreen"     onMouseEntered="#greenEnterHover"     onMouseExited="#greenLeaveHover"     radius="5" stroke="#000" />
+        <Circle fx:id="whiteButton"     fill="#FFFFFF" onMouseClicked="#setColorWhite"     onMouseEntered="#whiteEnterHover"     onMouseExited="#whiteLeaveHover"     radius="5" stroke="#000" />
+        <Circle fx:id="blackButton"     fill="#000000" onMouseClicked="#setColorBlack"     onMouseEntered="#blackEnterHover"     onMouseExited="#blackLeaveHover"     radius="5" stroke="#000" />
+        <Circle fx:id="grayButton"      fill="#7D7D7D" onMouseClicked="#setColorGray"      onMouseEntered="#grayEnterHover"      onMouseExited="#grayLeaveHover"      radius="5" stroke="#000" />
+        <Circle fx:id="pinkButton"      fill="#FF00A5" onMouseClicked="#setColorPink"      onMouseEntered="#pinkEnterHover"      onMouseExited="#pinkLeaveHover"      radius="5" stroke="#000" />
+        <Circle fx:id="lgreenButton"    fill="#B4FF00" onMouseClicked="#setColorLGreen"    onMouseEntered="#lgreenEnterHover"    onMouseExited="#lgreenLeaveHover"    radius="5" stroke="#000" />
+        <Circle fx:id="displayCircle"   fill="#FFFFFF" radius="10" stroke="#000" />
     </HBox>
 
 
-    <Button text="Submit" fx:id="submitPreferencesButton" onAction="#submitName"/>
+    <Button fx:id="submitPreferencesButton" onAction="#submitName" text="Submit" />
 
 </VBox>
