Fix ColorPreference views Add a visual difference when a button is selected

--- a/src/main/resources/views/layout_color_preference.fxml
+++ b/src/main/resources/views/layout_color_preference.fxml
@@ -1,7 +1,7 @@
 <?import client.ui.CircleButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" spacing="5" fx:id="kleur" xmlns="http://javafx.com/javafx/8.0.121"
+<HBox xmlns:fx="http://javafx.com/fxml/1" spacing="5" fx:id="container" xmlns="http://javafx.com/javafx/8.0.121"
       fx:controller="client.ui.ColorPreferenceController">
     <padding>
         <Insets left="1" right="1" top="3"/>
