Optimize Preferences view

--- a/src/main/resources/views/layout_preferences.fxml
+++ b/src/main/resources/views/layout_preferences.fxml
@@ -7,10 +7,11 @@
 <VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="800.0" prefWidth="800.0" spacing="5" xmlns="http://javafx.com/javafx/8.0.121"
       fx:controller="client.ui.PreferencesController">
     <Label text="Fill in your name"/>
+
     <TextField fx:id="nameField"/>
+
     <fx:include source="layout_color_preference.fxml" fx:id="colorPreference"/>
 
-
-    <Button fx:id="submitPreferencesButton" onAction="#submitName" text="Submit"/>
+    <Button fx:id="submitPreferencesButton" onAction="#submitPreferences" text="Submit"/>
 
 </VBox>
