--- a/src/main/resources/views/layout_main_menu.fxml
+++ b/src/main/resources/views/layout_main_menu.fxml
@@ -1,25 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Text?>
 <Pane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="client.ui.MainMenuController" fx:id="rootPane">
 
-    <HBox spacing="10">
-        <padding><Insets top="20" left="20"/></padding>
-        <VBox spacing="10">
-            <Label text="Ticket To Ride" fx:id="titleLabel"/>
-            <Label text="Play" fx:id="playLabel" onMouseEntered="#hoverEnterPlay" onMouseExited="#hoverExitPlay"/>
-            <Label text="Load" fx:id="loadLabel" onMouseEntered="#hoverEnterLoad" onMouseExited="#hoverExitLoad"/>
-            <Label text="Rules" fx:id="ruleLabel" onMouseEntered="#hoverEnterRule" onMouseExited="#hoverExitRule"/>
-            <Label text="Options" fx:id="optionLabel" onMouseEntered="#hoverEnterOption" onMouseExited="#hoverExitOption"/>
-            <Label text="Quit" fx:id="quitLabel" onMouseEntered="#hoverEnterQuit" onMouseExited="#hoverExitQuit" onMouseClicked="#quitGame"/>
-        </VBox>
-        <VBox>
-        </VBox>
-    </HBox>
+    <VBox spacing="20" fx:id="VBoxMain" alignment="BASELINE_CENTER" layoutY="20" layoutX="50">
+        <ImageView fx:id="Icon" fitWidth="550" preserveRatio="true">
+            <image>
+                <Image url="/images/logo.png"/>
+            </image>
+        </ImageView>
+        <Label text="Play" fx:id="playLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
+               onMouseClicked="#openMenuSequence"/>
+        <Label text="Load" fx:id="loadLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
+               onMouseClicked="#openMenuSequence"/>
+        <Label text="Rules" fx:id="ruleLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
+               onMouseClicked="#openMenuSequence"/>
+        <Label text="Options" fx:id="optionLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
+               onMouseClicked="#openMenuSequence"/>
+        <Label text="Quit" fx:id="quitLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
+               onMouseClicked="#quitGame"/>
+    </VBox>
+
+    <!--Start VBox Menu-->
+    <VBox spacing="20" fx:id="VBoxPlay" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
+        <ImageView fitWidth="550" preserveRatio="true">
+            <image>
+                <Image url="/images/makeagame.png"/>
+            </image>
+        </ImageView>
+        <Label fx:id="playCreateLobby" text="Create Lobby" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+        <Label fx:id="playJoinLobby" text="Join Lobby" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+    </VBox>
+
+    <!--Load VBox Menu-->
+    <VBox spacing="20" fx:id="VBoxLoad" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
+        <ImageView fitWidth="550" preserveRatio="true">
+            <image>
+                <Image url="/images/loadagame.png"/>
+            </image>
+        </ImageView>
+        <Label fx:id="loadLevelLabel" text="Load Level" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+    </VBox>
+
+    <!--Rules VBox Menu-->
+    <VBox spacing="5" fx:id="VBoxRule" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
+        <ImageView fitWidth="550" preserveRatio="true">
+            <image>
+                <Image url="/images/rules.png"/>
+            </image>
+        </ImageView>
+        <HBox spacing="5" fx:id="HBoxRule1">
+            <Label fx:id="ruleObjective" text="Object of the game" onMouseEntered="#hoverEnter"
+                   onMouseExited="#hoverExit"/>
+            <Label fx:id="ruleTurn" text="Game turn" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+            <Label fx:id="ruleTrainCards" text="Train cards" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+        </HBox>
+        <HBox spacing="5" fx:id="HBoxRule2">
+            <Label fx:id="ruleRoutes" text="Routes" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+            <Label fx:id="ruleTunnels" text="Tunnels" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+            <Label fx:id="ruleFerries" text="Ferries" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+        </HBox>
+        <HBox spacing="5" fx:id="HBoxRule3">
+            <Label fx:id="ruleDestinationCards" text="Destination Cards" onMouseEntered="#hoverEnter"
+                   onMouseExited="#hoverExit"/>
+            <Label fx:id="ruleEnd" text="End of the game" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+            <Label fx:id="ruleScore" text="Score Calculation" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+        </HBox>
+        <ScrollPane>
+            <Text fx:id="ruleObjectiveRules" wrappingWidth="760"
+                  text="There are 8 types of regular Train Car cards, plus Locomotive cards. The colors of each type of Train Car card match various routes between cities on the board - Purple, Blue, Orange, White, Green, Yellow, Black, and Red. Locomotives are multi-colored and act as a wild card that can be part of a set of cards only when claiming Tunnel or Ferry routes (see Tunnels and Ferries below). Locomotive cards can complement or replace the colored cards required to claim a Tunnel or Ferry route, but they
+can never be used to help claim a regular route. A player may have any number of cards in his hand at any time. When the deck is exhausted, the discards are reshuffled
+into a new draw pile deck. The cards should be shuffled thoroughly, since all the cards have been discarded in sets. In the unlikely event that there are no cards left
+in the deck and there are no discards (because players are hoarding many cards in their hands), a player cannot draw Train Car Cards. Instead he may only Claim a Route
+or draw Destination Ticket cards."/>
+        </ScrollPane>
+    </VBox>
+
+    <!--Options VBox Menu-->
+    <VBox spacing="20" fx:id="VBoxOption" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
+        <ImageView fitWidth="550" preserveRatio="true">
+            <image>
+                <Image url="/images/options.png"/>
+            </image>
+        </ImageView>
+        <Label text="Volume:" scaleX="2.0" scaleY="2.0"/>
+        <Slider fx:id="optionVolumeSlider" orientation="HORIZONTAL" max="1.0" min="0" value="0.5" showTickLabels="false"
+                showTickMarks="true" majorTickUnit="0.1" blockIncrement="0.1"/>
+        <CheckBox fx:id="optionColorblind" text="Colorblind" scaleX="2.0" scaleY="2.0"/>
+    </VBox>
+
+    <ImageView fx:id="mountains" preserveRatio="true" layoutX="0" layoutY="540">
+        <image>
+            <Image url="/images/mountains.png"/>
+        </image>
+    </ImageView>
 
 </Pane>
