--- a/src/main/resources/views/layout_lobby.fxml
+++ b/src/main/resources/views/layout_lobby.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 <VBox
         xmlns:fx="http://javafx.com/fxml"
         xmlns="http://javafx.com/javafx"
         fx:controller="client.ui.LobbyController"
-        fx:id="container"
-        prefHeight="400.0" prefWidth="600.0"/>
+        prefHeight="400.0" prefWidth="600.0">
+    <VBox fx:id="container"/>
+    <Button text="Start" onAction="#onStartButtonClicked"/>
+</VBox>
