Remove lib folder from version control

--- a/src/main/resources/views/layout_main_menu.fxml
+++ b/src/main/resources/views/layout_main_menu.fxml
@@ -18,8 +18,7 @@
             <Label text="Options" fx:id="optionLabel" onMouseEntered="#hoverEnterOption" onMouseExited="#hoverExitOption"/>
             <Label text="Quit" fx:id="quitLabel" onMouseEntered="#hoverEnterQuit" onMouseExited="#hoverExitQuit" onMouseClicked="#quitGame"/>
         </VBox>
-        <VBox>
-        </VBox>
+        <VBox/>
     </HBox>
 
 </Pane>
