--- a/src/main/resources/views/layout_main_menu.fxml
+++ b/src/main/resources/views/layout_main_menu.fxml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-<Pane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<Pane xmlns:fx="http://javafx.com/fxml/1" prefHeight="1080.0" prefWidth="3840.0"
+      xmlns="http://javafx.com/javafx/8.0.121"
       fx:controller="client.ui.MainMenuController" fx:id="rootPane">
 
-    <ImageView fx:id="exitButton" fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="10"
-               onMouseEntered="#widthUpImageView" onMouseExited="#widthDownImageView" onMouseClicked="#quitGame">
-        <image>
-            <Image url="/images/exitButton.png"/>
-        </image>
-    </ImageView>
+    <Pane fx:id="snowPane"/>
 
     <VBox spacing="20" fx:id="VBoxMain" alignment="BASELINE_CENTER" layoutY="20" layoutX="50">
-        <ImageView fx:id="Icon" fitWidth="550" preserveRatio="true">
+        <ImageView fitWidth="550" preserveRatio="true">
             <image>
                 <Image url="/images/logo.png"/>
             </image>
@@ -33,99 +29,15 @@
                onMouseClicked="#quitGame"/>
     </VBox>
 
-    <!--Start VBox Menu-->
-    <VBox spacing="20" fx:id="VBoxPlay" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
-        <ImageView fitWidth="550" preserveRatio="true">
-            <image>
-                <Image url="/images/makeagame.png"/>
-            </image>
-        </ImageView>
-        <Label fx:id="playCreateLobby" text="Create Lobby" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
-        <Label fx:id="playJoinLobby" text="Join Lobby" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
-    </VBox>
-
-    <!--Load VBox Menu-->
-    <VBox spacing="20" fx:id="VBoxLoad" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
-        <ImageView fitWidth="550" preserveRatio="true">
-            <image>
-                <Image url="/images/loadagame.png"/>
-            </image>
-        </ImageView>
-        <Label fx:id="loadLevelLabel" text="Load Level" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
-    </VBox>
-
-    <!--Rules VBox Menu-->
-    <VBox spacing="5" fx:id="VBoxRule" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
-        <ImageView fitWidth="550" preserveRatio="true">
-            <image>
-                <Image url="/images/rules.png"/>
-            </image>
-        </ImageView>
-        <HBox spacing="5" fx:id="HBoxRule1">
-            <Label fx:id="ruleObjective" text="Object of the game" onMouseEntered="#hoverEnter"
-                   onMouseExited="#hoverExit" onMouseClicked="#manageRules"/>
-            <Label fx:id="ruleTurn" text="Game turn" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-            <Label fx:id="ruleTrainCards" text="Train cards" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-        </HBox>
-        <HBox spacing="5" fx:id="HBoxRule2">
-            <Label fx:id="ruleRoutes" text="Routes" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-            <Label fx:id="ruleTunnels" text="Tunnels" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-            <Label fx:id="ruleFerries" text="Ferries" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-        </HBox>
-        <HBox spacing="5" fx:id="HBoxRule3">
-            <Label fx:id="ruleDestinationCards" text="Destination Cards" onMouseEntered="#hoverEnter"
-                   onMouseExited="#hoverExit" onMouseClicked="#manageRules"/>
-            <Label fx:id="ruleEnd" text="End of the game" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-            <Label fx:id="ruleScore" text="Score Calculation" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-                   onMouseClicked="#manageRules"/>
-        </HBox>
-        <ScrollPane hbarPolicy="NEVER" vbarPolicy="AS_NEEDED" maxHeight="300" minWidth="760">
-            <padding>
-                <Insets left="15" top="10" right="15" bottom="10"/>
-            </padding>
-            <Text fx:id="ruleRules" wrappingWidth="720"/>
-        </ScrollPane>
-    </VBox>
-
-    <!--Options VBox Menu-->
-    <VBox spacing="20" fx:id="VBoxOption" alignment="BASELINE_CENTER" layoutY="1500" layoutX="850">
-        <ImageView fitWidth="550" preserveRatio="true">
-            <image>
-                <Image url="/images/options.png"/>
-            </image>
-        </ImageView>
-        <Label text="Volume:" scaleX="2.0" scaleY="2.0"/>
-        <Slider fx:id="optionVolumeSlider" orientation="HORIZONTAL" max="1.0" min="0" value="0.5" showTickLabels="false"
-                showTickMarks="true" majorTickUnit="0.1" blockIncrement="0.1"/>
-        <CheckBox fx:id="optionMute" text="Mute" scaleX="2.0" scaleY="2.0" onMouseClicked="#mute" minWidth="100"/>
-        <CheckBox fx:id="optionColorblind" text="Colorblind" scaleX="2.0" scaleY="2.0" minWidth="100"/>
-    </VBox>
-
-    <ImageView fx:id="mountains" preserveRatio="true" layoutX="0" layoutY="540">
-        <image>
-            <Image url="/images/mountains.png"/>
-        </image>
-    </ImageView>
-    <ImageView fx:id="train1" preserveRatio="true" layoutX="-1500" layoutY="910" fitWidth="300">
-        <image>
-            <Image url="/images/train_blue.png"/>
-        </image>
-    </ImageView>
-    <ImageView fx:id="train2" preserveRatio="true" layoutX="-1200" layoutY="910" fitWidth="300">
-        <image>
-            <Image url="/images/train_blue.png"/>
-        </image>
-    </ImageView>
-    <ImageView fx:id="train3" preserveRatio="true" layoutX="-900" layoutY="910" fitWidth="300">
-        <image>
-            <Image url="/images/train_blue.png"/>
-        </image>
-    </ImageView>
+    <fx:include source="layout_main_menu_play.fxml" fx:id="VBoxPlay" alignment="BASELINE_CENTER" layoutY="1500"
+                layoutX="850"/>
+    <fx:include source="layout_main_menu_load.fxml" fx:id="VBoxLoad" alignment="BASELINE_CENTER" layoutY="1500"
+                layoutX="850"/>
+    <fx:include source="layout_main_menu_rules.fxml" fx:id="VBoxRule" alignment="BASELINE_CENTER" layoutY="1500"
+                prefHeight="600" layoutX="850"/>
+    <fx:include source="layout_main_menu_options.fxml" fx:id="VBoxOption" alignment="BASELINE_CENTER" layoutY="1500"
+                layoutX="850"/>
+    <fx:include source="layout_main_menu_front_images.fxml" fx:id="images" translateY="540"/>
+    <Pane fx:id="snowPaneFront" translateY="600"/>
 
 </Pane>
