--- a/src/main/resources/views/layout_startup.fxml
+++ b/src/main/resources/views/layout_startup.fxml
@@ -6,13 +6,14 @@
 <Pane xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.StartupController"
-      prefHeight="400.0" prefWidth="600.0"
+      prefHeight="1080" prefWidth="3840"
       fx:id="rootPane">
 
-    <Pane fx:id="snowPane"/>
+    <Pane fx:id="allPanes">
     <fx:include source="layout_main_menu.fxml" fx:id="MainMenuPane" disable="false"/>
     <fx:include source="layout_preferences.fxml" fx:id="preferencesPane" layoutX="1920"/>
 
+    </Pane>
     <ImageView fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="10" onMouseEntered="#widthUpImageView"
                onMouseExited="#widthDownImageView" onMouseClicked="#quitGame">
         <image>
