--- a/src/main/resources/views/layout_preferences.fxml
+++ b/src/main/resources/views/layout_preferences.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="800.0" prefWidth="800.0" spacing="5"
+<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="800.0" prefWidth="1920.0" spacing="5" alignment="CENTER"
       xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="client.ui.PreferencesController">
-    <Label text="Fill in your name"/>
-
-    <TextField fx:id="nameField"/>
-
+      fx:controller="client.ui.PreferencesController" fx:id="rootPane">
+    <Label alignment="CENTER" prefHeight="25.0" prefWidth="135.0" text="Name" fx:id="nameLabel"/>
+    <TextField fx:id="nameField" alignment="CENTER" maxWidth="200.0" minHeight="25.0" minWidth="200.0" prefHeight="30.0"
+               prefWidth="200.0"/>
     <fx:include source="layout_color_preference.fxml" fx:id="colorPreference"/>
-
-    <Button fx:id="submitButton" text="Submit"/>
-
+    <HBox fx:id="buttons" prefWidth="1920" alignment="CENTER" spacing="20">
+        <Label fx:id="backButton" text="Back" onMouseEntered="#entered" onMouseExited="#exited"/>
+        <Label fx:id="createButton" text="Create lobby" onMouseEntered="#entered" onMouseExited="#exited"/>
+        <Label fx:id="joinButton" text="Join lobby" onMouseEntered="#entered" onMouseExited="#exited"/>
+    </HBox>
 </VBox>
