Lobby added into the startup layout. Players get their names filled in with their chosen color. Background color for their name is relative to their chosen color Join and create server fixed, name control broke.
TODO:
Method for closing the server.
Method for removing players from the list.
Finding a fix for name control.

--- a/src/main/resources/views/layout_startup.fxml
+++ b/src/main/resources/views/layout_startup.fxml
@@ -12,7 +12,7 @@
     <Pane fx:id="allPanes">
     <fx:include source="layout_main_menu.fxml" fx:id="MainMenuPane" disable="false"/>
     <fx:include source="layout_preferences.fxml" fx:id="preferencesPane" layoutX="1920"/>
-
+        <fx:include source="layout_lobby.fxml" fx:id="lobbyPane" layoutY="1080" layoutX="1920"/>
     </Pane>
     <ImageView fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="10" onMouseEntered="#widthUpImageView"
                onMouseExited="#widthDownImageView" onMouseClicked="#quitGame">
