--- a/src/main/resources/views/layout_lobby.fxml
+++ b/src/main/resources/views/layout_lobby.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox
         xmlns:fx="http://javafx.com/fxml"
         xmlns="http://javafx.com/javafx"
         fx:controller="client.ui.LobbyController"
-        prefHeight="400.0" prefWidth="600.0">
-    <VBox fx:id="container"/>
-    <Button text="Start" onAction="#onStartButtonClicked"/>
+        prefHeight="1080.0" prefWidth="1920.0" alignment="CENTER"
+        spacing="20">
+    <VBox fx:id="container" alignment="BASELINE_CENTER"/>
+    <HBox prefWidth="1080" alignment="CENTER" spacing="10">
+        <Label fx:id="quitButtonLabel" text="Quit" onMouseEntered="#entered" onMouseExited="#exited"/>
+        <Label fx:id="startButtonLabel" text="Start" onMouseEntered="#entered" onMouseExited="#exited"
+               onMouseClicked="#onStartButtonClicked"/>
+    </HBox>
 </VBox>
